--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,6 @@
 <network-security-config>
   <domain-config cleartextTrafficPermitted="true">
     <!-- Add your server's domain here -->
-    <domain includeSubdomains="true">"http://35.180.24.145:7000"</domain>
+    <domain includeSubdomains="true">35.180.24.145:7000</domain>
   </domain-config>
 </network-security-config>
